--- a/style.css
+++ b/style.css
@@ -77,7 +77,9 @@ svg{
 .task[data-type="proc"] {
     background: #ffa35a;
 }
-
+.task[data-type="proxy"] {
+    background: #007f84;
+}
 .task[data-type="if"] .ok{
     display: block;
     left: 100%;
@@ -94,6 +96,7 @@ svg{
 }
 .task[data-type="start"] .norm,
 .task[data-type="proc"] .norm,
+.task[data-type="proxy"] .norm,
 .task[data-type="rm"] .norm,
 .task[data-type="mailing"] .norm,
 .task[data-type="add"] .norm,
