--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ svg{
     border: 1px solid #333;
     color: #333;
 }
-.task .norm, .task .ok, .task .err, .task .mailing{
+.task .norm, .task .ok, .task .err, .task .mailing, .task .rm{
     width: 1em;
     height: 1em;
     position: absolute;
@@ -93,6 +93,14 @@ svg{
     bottom: 0.2em;
     margin: auto;
     background: red;
+}
+.task .rm{
+    display: block;
+    left: -1em;
+    bottom: 0;
+    top: 0;
+    margin: auto;
+    /*background: red;*/
 }
 .task[data-type="start"] .norm,
 .task[data-type="proc"] .norm,
